--- a/src/.npmignore
+++ b/src/.npmignore
@@ -2,4 +2,13 @@ test
 tests
 /lib
 .gitignore
-sample_property/deeploy.json
+
+# ignore symlinks
+lib.compiled/Compilation
+lib.compiled/Dependencies
+lib.compiled/Exception
+lib.compiled/Helpers
+lib.compiled/Microservice
+lib.compiled/Parameters
+lib.compiled/Property
+lib.compiled/Provisioning
