--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mitocgroup/deepify",
-  "version": "0.1.54",
+  "version": "0.1.56",
   "description": "Deep development tools",
   "author": {
     "name": "Mitoc Group",
@@ -46,7 +46,7 @@
   },
   "scripts": {
     "coverage": "babel-node `which istanbul` cover --report lcovonly _mocha -- --ui tdd --recursive --reporter spec",
-    "postinstall": "hooks/assure_deep_dev.js && npm run link-deep-package-manager && npm run link-deep-package-manager-npm && npm run link-deep-package-manager-npm-subdirs && hooks/autocomplete_deepify.sh",
+    "postinstall": "npm run link-deep-package-manager && npm run link-deep-package-manager-npm && npm run link-deep-package-manager-npm-subdirs && hooks/assure_deep_dev.js && hooks/autocomplete_deepify.sh",
     "test": "mocha --ui tdd --compilers js:mocha-babel --recursive --reporter spec",
     "compile": "if [ -d 'lib/' ]; then BABEL_ENV=production babel lib/ --out-dir lib.compiled/; fi",
     "prepublish": "npm run compile",
