implement frontend engine fetching

--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deepify",
-  "version": "0.1.92",
+  "version": "0.1.93",
   "description": "DEEP Development Tools",
   "keywords": [
     "Digital Enterprise End-To-End Platform",
@@ -63,7 +63,8 @@
     "open": "0.0.*"
   },
   "devDependencies": {
-    "chai": "3.2.*"
+    "chai": "3.2.*",
+    "aws-sdk": "2.1.*"
   },
   "engines": {
     "node": ">=0.12",
