--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deepify",
-  "version": "0.1.96",
+  "version": "1.0.1",
   "description": "DEEP Development Tools",
   "keywords": [
     "Digital Enterprise End-To-End Platform",
@@ -57,7 +57,7 @@
     "link-deep-package-manager-npm": "ln -s `pwd`/node_modules/deep-package-manager/node_modules/* `pwd`/node_modules || true"
   },
   "dependencies": {
-    "deep-package-manager": "*",
+    "deep-package-manager": "1.0.*",
     "proxyquire": "1.5.*",
     "v8-profiler": "5.2.*",
     "traceviewify": "0.4.*",
