--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,13 @@ node_js:
 cache:
   directories:
   - "$(npm root -g)"
-notifications:
-  email:
-  - devs-deep@mitocgroup.com
 branches:
   only:
   - master
   - stage
   - test
   - dev
+  - unit-testing
 before_install:
 - npm install -g babel
 - npm install -g browserify
