--- a/src/package.json
+++ b/src/package.json
@@ -48,11 +48,12 @@
   },
   "scripts": {
     "coverage": "babel-node `which istanbul` cover --report lcovonly _mocha -- --ui tdd --recursive --reporter spec",
+    "preinstall": "npm run compile",
     "postinstall": "npm run link-deep-package-manager && npm run link-deep-package-manager-npm && hooks/assure_deep_dev.js && hooks/autocomplete_deepify.sh",
     "test": "mocha --ui tdd --compilers js:mocha-babel --recursive --reporter spec",
     "compile": "if [ -d 'lib/' ]; then BABEL_ENV=production babel lib/ --out-dir lib.compiled/; fi",
     "obfuscate-compiled": "if [ -d 'lib/' ]; then npm list -g --depth 1 uglify > /dev/null 2>&1 || npm install uglify -g; for f in $(find lib.compiled -type f -name *.js); do uglify -s ${f} -o ${f}; done; fi",
-    "prepublish": "npm run compile && npm run obfuscate-compiled",
+    "prepublish": "npm run obfuscate-compiled",
     "link-deep-package-manager": "ln -s `pwd`/node_modules/deep-package-manager/lib.compiled/* `pwd`/lib.compiled || true",
     "link-deep-package-manager-npm": "ln -s `pwd`/node_modules/deep-package-manager/node_modules/* `pwd`/node_modules || true"
   },
