Add coverage report

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,15 @@ node_js:
 cache:
   directories:
   - $(npm root -g)
+notifications:
+  email:
+  - devs-deep@mitocgroup.com
 branches:
   only:
   - master
   - stage
   - test
   - dev
-  - unit-testing
 env:
   global:
   #COVERALLS_SERVICE_NAME =[secured]
