--- a/src/package.json
+++ b/src/package.json
@@ -65,7 +65,10 @@
     "open": "0.0.*"
   },
   "devDependencies": {
-    "aws-sdk": "2.1.*"
+    "aws-sdk": "2.1.*",
+    "chai": "3.2.*",
+    "sinon": "1.17.*",
+    "sinon-chai": "2.8.*"
   },
   "engines": {
     "node": ">=0.12",
