--- a/src/package.json
+++ b/src/package.json
@@ -62,7 +62,8 @@
     "proxyquire": "1.5.*",
     "v8-profiler": "5.2.*",
     "traceviewify": "0.4.*",
-    "open": "0.0.*"
+    "open": "0.0.*",
+    "deep-log": "1.1.*"
   },
   "devDependencies": {
     "aws-sdk": "2.2.*",
