--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deepify",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "DEEP Development Tools",
   "keywords": [
     "Digital Enterprise End-To-End Platform",
@@ -72,7 +72,7 @@
     "sinon-chai": "2.8.*"
   },
   "engines": {
-    "node": ">=0.12",
+    "node": ">=0.12 <5.0.0",
     "npm": ">=2.10"
   },
   "os": [
