--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deepify",
-  "version": "1.1.11",
+  "version": "1.2.0",
   "description": "DEEP Development Tools",
   "keywords": [
     "Digital Enterprise End-To-End Platform",
@@ -58,18 +58,18 @@
     "link-deep-package-manager-npm": "ln -s `pwd`/node_modules/deep-package-manager/node_modules/* `pwd`/node_modules || true"
   },
   "dependencies": {
-    "deep-package-manager": "1.1.*",
-    "proxyquire": "1.5.*",
-    "v8-profiler": "5.2.*",
-    "traceviewify": "0.4.*",
-    "open": "0.0.*",
-    "deep-log": "1.1.*"
+    "deep-package-manager": "^1.x.x",
+    "deep-log": "^1.x.x",
+    "proxyquire": "^1.5.x",
+    "v8-profiler": "^5.2.x",
+    "traceviewify": "^0.4.x",
+    "open": "^0.0.x"
   },
   "devDependencies": {
-    "aws-sdk": "2.2.*",
-    "chai": "3.2.*",
-    "sinon": "1.17.*",
-    "sinon-chai": "2.8.*"
+    "aws-sdk": "^2.2.x",
+    "chai": "^3.2.x",
+    "sinon": "^1.17.x",
+    "sinon-chai": "^2.8.x"
   },
   "engines": {
     "node": ">=0.12 <5.0.0",
