--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deepify",
-  "version": "1.2.13",
+  "version": "1.2.14",
   "description": "DEEP Development Tools",
   "keywords": [
     "Digital Enterprise End-To-End Platform",
@@ -60,11 +60,14 @@
     "deep-log": "^1.x.x",
     "deep-db": "^1.x.x",
     "deep-core": "^1.x.x",
+    "mkdirp": "^0.5.x",
     "proxyquire": "^1.5.x",
     "v8-profiler": "^5.2.x",
     "traceviewify": "^0.4.x",
     "open": "^0.0.x",
-    "aws-sdk": "^2.2.x"
+    "aws-sdk": "^2.2.x",
+    "jsonfile": "^1.1.x",
+    "fs-extra": "^0.23.x"
   },
   "devDependencies": {
     "chai": "^3.2.x",
