--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deepify",
-  "version": "1.2.16",
+  "version": "1.2.17",
   "description": "DEEP Development Tools",
   "keywords": [
     "Digital Enterprise End-To-End Platform",
@@ -71,7 +71,8 @@
     "sync-exec": "^0.6.x",
     "archiver": "^0.14.x",
     "tmp": "^0.0.x",
-    "aws-api-gw-client": "^0.1.x"
+    "aws-api-gw-client": "^0.1.x",
+    "mime": "^1.3.x"
   },
   "devDependencies": {
     "chai": "^3.2.x",
