--- a/src/package.json
+++ b/src/package.json
@@ -79,7 +79,7 @@
     "sinon-chai": "^2.8.x"
   },
   "engines": {
-    "node": ">=0.12",
+    "node": ">=0.12 <5.0.0",
     "npm": ">=2.10"
   },
   "os": [
