--- a/src/package.json
+++ b/src/package.json
@@ -71,7 +71,8 @@
     "archiver": "^0.14.x",
     "tmp": "^0.0.x",
     "aws-api-gw-client": "^0.1.x",
-    "mime": "^1.3.x"
+    "mime": "^1.3.x",
+    "gather-dependencies": "^1.0.x"
   },
   "devDependencies": {
     "chai": "^3.2.x",
