--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ before_install:
   - npm install -g mocha-babel@3.0.0
   - npm install -g istanbul@0.3.21
   - npm install -g istanbul-combine@0.3.0
+  - npm install -g isparta@3.1.0
   - npm install -g codacy-coverage@1.1.3
   - cp test/package.json .
 after_success:
