Fix paths in bin

--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deepify",
-  "version": "1.5.3",
+  "version": "1.5.4",
   "description": "DEEP Development Tools",
   "keywords": [
     "Digital Enterprise End-To-End Platform",
@@ -55,7 +55,7 @@
     "prepublish": "npm run obfuscate-compiled"
   },
   "dependencies": {
-    "deep-package-manager": "^1.x.x",
+    "deep-package-manager": "file:../../../deep-package-manager/src",
     "deep-log": "^1.x.x",
     "deep-fs": "^1.x.x",
     "deep-db": "^1.x.x",
