--- a/src/package.json
+++ b/src/package.json
@@ -68,11 +68,7 @@
     "aws-api-gw-client": "^0.1.x",
     "mime": "^1.3.x",
     "gather-dependencies": "^1.0.x",
-    "aws-sdk": "^2.2.x",
-    "fetchy-request": "^0.8.x",
-    "joi": "^6.4.x",
-    "tar-stream": "^1.3.x",
-    "gunzip-maybe": "^1.3.1"
+    "aws-sdk": "^2.2.x"
   },
   "devDependencies": {
     "chai": "^3.2.x",
