--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deepify",
-  "version": "1.7.18",
+  "version": "1.7.20",
   "description": "DEEP Development Tools",
   "keywords": [
     "Digital Enterprise End-To-End Platform",
@@ -69,7 +69,9 @@
     "mime": "^1.3.x",
     "gather-dependencies": "^1.0.x",
     "aws-sdk": "^2.2.x",
-    "semver": "^5.1.x"
+    "semver": "^5.1.x",
+    "uglify-js": "^2.6.x",
+    "cli-spinner": "^0.2.x"
   },
   "devDependencies": {
     "chai": "^3.2.x",
