--- a/src/package.json
+++ b/src/package.json
@@ -55,6 +55,10 @@
     "prepublish": "npm run obfuscate-compiled"
   },
   "dependencies": {
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-transform-es2015-classes": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015-node4": "^2.1.0",
     "deep-package-manager": "^1.x.x",
     "deep-log": "^1.x.x",
     "deep-fs": "^1.x.x",
