--- a/src/package.json
+++ b/src/package.json
@@ -59,7 +59,7 @@
     "babel-plugin-transform-es2015-classes": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-node4": "^2.1.0",
-    "deep-package-manager": "file:/home/ccristi/mitocgroup/deep-package-manager/src",
+    "deep-package-manager": "^1.x.x",
     "deep-log": "^1.x.x",
     "deep-fs": "^1.x.x",
     "deep-db": "^1.x.x",
