--- a/src/package.json
+++ b/src/package.json
@@ -66,7 +66,7 @@
     "deep-db": "^1.x.x",
     "deep-fs": "^1.x.x",
     "deep-log": "^1.x.x",
-    "deep-package-manager": "^1.x.x",
+    "deep-package-manager": "file:/Users/ccristi/mitocgroup/deep-package-manager/src",
     "fs-extra": "^0.23.x",
     "gather-dependencies": "^1.0.x",
     "inquirer": "^1.0.2",
