--- a/src/package.json
+++ b/src/package.json
@@ -55,28 +55,31 @@
     "prepublish": "npm run obfuscate-compiled"
   },
   "dependencies": {
+    "aws-api-gw-client": "^0.1.x",
+    "aws-sdk": "^2.2.x",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-transform-es2015-classes": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-node4": "^2.1.0",
-    "deep-package-manager": "^1.x.x",
-    "deep-log": "^1.x.x",
-    "deep-fs": "^1.x.x",
-    "deep-db": "^1.x.x",
-    "deep-core": "^1.x.x",
-    "proxyquire": "^1.5.x",
-    "open": "^0.0.x",
-    "jsonfile": "^1.1.x",
-    "fs-extra": "^0.23.x",
-    "tmp": "^0.0.x",
-    "aws-api-gw-client": "^0.1.x",
-    "mime": "^1.3.x",
-    "gather-dependencies": "^1.0.x",
-    "aws-sdk": "^2.2.x",
-    "semver": "^5.1.x",
-    "uglify-js": "^2.6.x",
     "cli-spinner": "^0.2.x",
-    "object-merge": "^2.5.x"
+    "deep-core": "^1.x.x",
+    "deep-db": "^1.x.x",
+    "deep-fs": "^1.x.x",
+    "deep-log": "^1.x.x",
+    "deep-package-manager": "^1.x.x",
+    "fs-extra": "^0.23.x",
+    "gather-dependencies": "^1.0.x",
+    "inquirer": "^1.0.2",
+    "joi": "^8.0.5",
+    "jsonfile": "^1.1.x",
+    "mime": "^1.3.x",
+    "object-merge": "^2.5.x",
+    "open": "^0.0.x",
+    "proxyquire": "^1.5.x",
+    "semver": "^5.1.x",
+    "tmp": "^0.0.x",
+    "twig": "^0.8.9",
+    "uglify-js": "^2.6.x"
   },
   "devDependencies": {
     "chai": "^3.2.x",
