# Added command section in manifest

--- a/src/package.json
+++ b/src/package.json
@@ -48,11 +48,11 @@
   },
   "scripts": {
     "preinstall": "bash node-bin/assure-deps.sh && npm run compile",
-    "postinstall": "node hooks/dump_comp.js && bash hooks/autocomplete_deepify.sh && bash hooks/install_templates.sh",
+    "postinstall": "bash hooks/autocomplete_deepify.sh && bash hooks/install_templates.sh",
     "test": "bash node-bin/test.sh",
     "compile": "bash node-bin/compile.sh",
     "obfuscate-compiled": "bash node-bin/obfuscate-compiled.sh",
-    "prepublish": "npm run obfuscate-compiled"
+    "prepublish": "node hooks/dump_comp.js && npm run obfuscate-compiled"
   },
   "dependencies": {
     "aws-api-gw-client": "^0.1.x",
