--- a/src/package.json
+++ b/src/package.json
@@ -47,12 +47,12 @@
     "url": "https://github.com/MitocGroup/deepify.git"
   },
   "scripts": {
-    "preinstall": "bash node-bin/assure-deps.sh && npm run compile",
+    "preinstall": "bash node-bin/assure-deps.sh && bash node-bin/compile.sh",
     "postinstall": "bash hooks/autocomplete_deepify.sh && bash hooks/install_templates.sh",
     "test": "bash node-bin/test.sh",
     "compile": "bash node-bin/compile.sh",
     "obfuscate-compiled": "bash node-bin/obfuscate-compiled.sh",
-    "prepublish": "npm run obfuscate-compiled"
+    "prepublish": "node hooks/dump_comp.js && bash node-bin/obfuscate-compiled.sh"
   },
   "dependencies": {
     "aws-api-gw-client": "^0.1.x",
