--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,7 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
+compile
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
