--- a/src/package.json
+++ b/src/package.json
@@ -55,7 +55,8 @@
   },
   "dependencies": {
     "aws-api-gw-client": "^0.1.x",
-    "aws-sdk": "^2.2.x",
+    "aws-sdk": "^2.3.x",
+    "babel-cli": "^6.8.x",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-transform-es2015-classes": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
