--- a/src/package.json
+++ b/src/package.json
@@ -75,11 +75,11 @@
     "mime": "^1.3.x",
     "object-merge": "^2.5.x",
     "open": "^0.0.x",
-    "proxyquire": "^1.5.x",
     "semver": "^5.1.x",
     "tmp": "^0.0.x",
     "twig": "^0.8.9",
-    "uglify-js": "^2.6.x"
+    "uglify-js": "^2.6.x",
+    "dtrace-provider": "^0.6.x"
   },
   "devDependencies": {
     "chai": "^3.2.x",
