--- a/src/package.json
+++ b/src/package.json
@@ -67,20 +67,20 @@
     "deep-fs": "^1.x.x",
     "deep-log": "^1.x.x",
     "deep-package-manager": "^1.x.x",
-    "fs-ext": "^0.5.0",
+    "dtrace-provider": "^0.6.x",
     "fs-extra": "^0.23.x",
     "gather-dependencies": "^1.0.x",
     "inquirer": "^1.0.2",
     "joi": "^8.0.5",
     "jsonfile": "^1.1.x",
+    "lockfile": "^1.0.1",
     "mime": "^1.3.x",
     "object-merge": "^2.5.x",
     "open": "^0.0.x",
     "semver": "^5.1.x",
     "tmp": "^0.0.x",
     "twig": "^0.8.9",
-    "uglify-js": "^2.6.x",
-    "dtrace-provider": "^0.6.x"
+    "uglify-js": "^2.6.x"
   },
   "devDependencies": {
     "chai": "^3.2.x",
