--- a/.hound.yml
+++ b/.hound.yml
@@ -1,9 +1,12 @@
 fail_on_violations: true
 
 javascript:
-  enabled: true
-  ignore_file: .houndignore
-  config_file: .eslintrc
+  jshint:
+    enabled: false
+  eslint:
+    enabled: true
+    config_file: .eslintrc
+    ignore_file: .eslintignore
 
 ### IGNORE THIS SECTION ###
 
