--- a/.eslintrc
+++ b/.eslintrc
@@ -49,7 +49,7 @@ rules:
   no-unexpected-multiline: 2
   no-unreachable: 2
   use-isnan: 2
-  valid-jsdoc: 0
+  valid-jsdoc: [2, {requireParamDescription: false, requireReturn: false, requireReturnDescription: false}]
   valid-typeof: 2
 
   # Best Practices
@@ -188,7 +188,7 @@ rules:
   padded-blocks: 0
   quote-props: 0
   quotes: [2, single]
-  require-jsdoc: 0
+  require-jsdoc: 2
   semi-spacing: 0
   semi: 0
   sort-vars: 0
