--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ before_install:
   - (npm list -g browserify --depth=0 || npm install -g browserify@11.2.x)
   - (npm list -g mocha@2.5.x --depth=0 || npm install -g mocha@2.5.x)
   - (npm list -g istanbul@^1.0.0-alpha --depth=0 || npm install -g istanbul@^1.0.0-alpha)
+  - (npm list -g istanbul-combine --depth=0 || npm install -g istanbul-combine@0.3.x)
   - (npm list -g codacy-coverage --depth=0 || npm install -g codacy-coverage@1.1.x)
   - cp test/package.json .
 after_success:
