--- a/.eslintrc
+++ b/.eslintrc
@@ -123,12 +123,12 @@ rules:
   no-undef-init: 2
   no-undef: 2
   no-undefined: 2
-  no-unused-vars: 2
+  no-unused-vars: [2, {args: "none"}]
   no-use-before-define: 2
 
   # Node.js and CommonJS
   callback-return: 2
-  global-require: 1
+  global-require: 0
   handle-callback-err: 2
   no-mixed-requires: 0
   no-new-require: 0
