--- a/.eslintrc
+++ b/.eslintrc
@@ -115,7 +115,7 @@ rules:
 
   # Variables
   init-declarations: 0
-  no-catch-shadow: 2
+  no-catch-shadow: 1
   no-delete-var: 2
   no-label-var: 2
   no-shadow-restricted-names: 2
@@ -141,7 +141,7 @@ rules:
   array-bracket-spacing: 0
   block-spacing: 0
   brace-style: 0
-  camelcase: [1, {properties: "never"}]
+  camelcase: [0, {properties: "never"}]
   comma-spacing: 0
   comma-style: 0
   computed-property-spacing: 0
@@ -151,7 +151,7 @@ rules:
   func-style: 0
   id-length: 0
   id-match: 0
-  indent: [2, 2]
+  indent: [2, 2, { SwitchCase: 1 }]
   jsx-quotes: 0
   key-spacing: 0
   linebreak-style: 0
@@ -165,7 +165,7 @@ rules:
   new-parens: 0
   newline-after-var: 0
   no-array-constructor: 0
-  no-bitwise: 1
+  no-bitwise: 0
   no-continue: 0
   no-inline-comments: 0
   no-lonely-if: 0
