Update todo && fix code quality issues

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -24,17 +24,16 @@ ratings:
   - "**.es6"
   - "**.module"
 exclude_paths:
-- "bin/**/*"
-- "test/**/*"
-- "**/tests"
-- "tmp/**/*"
-- "vendor/**/*"
-- "coverage/*"
-- "**/coverage"
-- ".idea/"
-- "**.spec.js"
-- "**.min.js"
-- "**.min.css"
-- "**/dist"
-- "**/node_modules"
-- "**/packages"
+  - "**/bin/"
+  - "**/test/"
+  - "**/tests/"
+  - "**/tmp/"
+  - "**/vendor/"
+  - "**/coverage"
+  - "**/dist"
+  - "**/node_modules"
+  - "**/packages"
+  - ".idea/"
+  - "**.spec.js"
+  - "**.min.js"
+  - "**.min.css"
