Update to node v6.4

--- a/.eslintrc
+++ b/.eslintrc
@@ -195,7 +195,7 @@ rules:
   operator-linebreak: 0
   padded-blocks: 0
   quote-props: 0
-  quotes: [2, single]
+  quotes: [2, single, {allowTemplateLiterals: true}]
   require-jsdoc: 2
   semi-spacing: 0
   semi: 0
