--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,3 @@
----
 engines:
   csslint:
     enabled: true
@@ -9,31 +8,31 @@ engines:
         javascript:
           mass_threshold: 650
     exclude_paths:
-      - "**/tests"
+      - '**/tests'
   eslint:
     enabled: true
-    channel: "eslint-2"
+    channel: eslint-2
   fixme:
     enabled: true
 ratings:
   paths:
-  - "**.css"
-  - "**.inc"
-  - "**.js"
-  - "**.jsx"
-  - "**.es6"
-  - "**.module"
+    - '**.css'
+    - '**.inc'
+    - '**.js'
+    - '**.jsx'
+    - '**.es6'
+    - '**.module'
 exclude_paths:
-  - "**/bin/"
-  - "**/test/"
-  - "**/tests/"
-  - "**/tmp/"
-  - "**/vendor/"
-  - "**/coverage"
-  - "**/dist"
-  - "**/node_modules"
-  - "**/packages"
-  - ".idea/"
-  - "**.spec.js"
-  - "**.min.js"
-  - "**.min.css"
+  - '**/bin/'
+  - '**/test/'
+  - '**/tests/'
+  - '**/tmp/'
+  - '**/vendor/'
+  - '**/coverage'
+  - '**/dist'
+  - '**/node_modules'
+  - '**/packages'
+  - '**/.idea'
+  - '**.spec.js'
+  - '**.min.js'
+  - '**.min.css'
