Add support for starting ssl secured local server

--- a/src/package.json
+++ b/src/package.json
@@ -81,7 +81,8 @@
     "semver": "^5.2.x",
     "tmp": "^0.0.x",
     "twig": "^0.9.x",
-    "uglify-js": "^2.7.x"
+    "uglify-js": "^2.7.x",
+    "local-ssl-proxy": "^1.3.x"
   },
   "devDependencies": {
     "chai": "^3.5.x",
