--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deepify",
-  "version": "1.8.31",
-  "buildDate": "Wed Oct 26 17:44:42 EEST 2016",
+  "version": "1.8.32",
+  "buildDate": "Wed Oct 26 19:13:04 EEST 2016",
   "description": "DEEP Development Tools",
   "keywords": [
     "Digital Enterprise End-To-End Platform",
@@ -81,8 +81,7 @@
     "semver": "^5.2.x",
     "tmp": "^0.0.x",
     "twig": "^0.9.x",
-    "uglify-js": "^2.7.x",
-    "local-ssl-proxy": "^1.3.x"
+    "uglify-js": "^2.7.x"
   },
   "devDependencies": {
     "chai": "^3.5.x",
