--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deepify",
-  "version": "1.8.32",
-  "buildDate": "Wed Oct 26 19:13:04 EEST 2016",
+  "version": "1.8.34",
+  "buildDate": "Fri Nov 11 13:22:06 EET 2016",
   "description": "DEEP Development Tools",
   "keywords": [
     "Digital Enterprise End-To-End Platform",
