--- a/src/package.json
+++ b/src/package.json
@@ -76,6 +76,7 @@
     "jsonfile": "^2.4.x",
     "lockfile": "^1.0.x",
     "mime": "^1.3.x",
+    "multi-progress": "^2.0.0",
     "object-merge": "^2.5.x",
     "open": "^0.0.x",
     "semver": "^5.2.x",
