--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deepify",
-  "version": "2.0.12",
-  "buildDate": "Mon Mar 20 11:52:59 EET 2017",
+  "version": "2.0.13",
+  "buildDate": "Tue Mar 28 10:54:19 EEST 2017",
   "description": "DEEP Development Tools",
   "keywords": [
     "Digital Enterprise End-To-End Platform",
