--- a/src/package.json
+++ b/src/package.json
@@ -51,26 +51,23 @@
     "postinstall": "bash hooks/autocomplete_deepify.sh && bash hooks/install_templates.sh && bash hooks/ensure_es.sh",
     "test": "bash node-bin/test.sh",
     "compile": "bash node-bin/compile.sh",
-    "obfuscate-compiled": "bash node-bin/obfuscate-compiled.sh",
-    "prepublish": "bash node-bin/assure-deps.sh && bash node-bin/compile.sh && node hooks/dump_comp.js && bash node-bin/obfuscate-compiled.sh"
+    "prepublish": "bash node-bin/assure-deps.sh && bash node-bin/compile.sh && node hooks/dump_comp.js"
   },
   "dependencies": {
-    "aws-sdk": "^2.22.x",
-    "babel-cli": "^6.10.x",
-    "babel-plugin-add-module-exports": "^0.2.x",
-    "babel-plugin-transform-es2015-classes": "^6.9.x",
-    "babel-preset-es2015": "^6.9.x",
-    "babel-preset-es2015-node4": "^2.1.x",
+    "aws-sdk": "^2.39.x",
+    "babel-cli": "^6.24.x",
+    "babel-preset-node6": "^11.0.x",
+    "babel-preset-modern-browsers": "^9.0.x",
     "cli-spinner": "^0.2.x",
     "co": "^4.6.x",
+    "es6-promise-pool": "^2.4.x",
     "deep-core": "^1.x.x",
     "deep-db": "^1.x.x",
     "deep-fs": "^1.x.x",
     "deep-log": "^1.x.x",
     "deep-package-manager": "^1.x.x",
     "dtrace-provider": "^0.8.x",
-    "fs-extra": "2.0.x",
-    "gather-dependencies": "^1.0.x",
+    "fs-extra": "^2.1.x",
     "inquirer": "^3.0.x",
     "joi": "^10.2.x",
     "jsonfile": "^2.4.x",
@@ -82,7 +79,7 @@
     "semver": "^5.2.x",
     "tmp": "^0.0.x",
     "twig": "^1.10.x",
-    "uglify-js": "^2.7.x"
+    "webpack-merge": "^4.1.x"
   },
   "devDependencies": {
     "chai": "^3.5.x",
@@ -90,8 +87,8 @@
     "sinon-chai": "^2.8.x"
   },
   "engines": {
-    "node": ">=4.3 <5.0",
-    "npm": ">=2.10 <3.0"
+    "node": ">=6.0 <7.0",
+    "npm": ">=3.0"
   },
   "preferGlobal": true,
   "analyze": true
