--- a/src/package.json
+++ b/src/package.json
@@ -58,6 +58,7 @@
     "babel-cli": "^6.24.x",
     "babel-preset-node6": "^11.0.x",
     "babel-preset-modern-browsers": "^9.0.x",
+    "babel-plugin-add-module-exports": "^0.2.x",
     "cli-spinner": "^0.2.x",
     "co": "^4.6.x",
     "es6-promise-pool": "^2.4.x",
@@ -65,7 +66,7 @@
     "deep-db": "^1.x.x",
     "deep-fs": "^1.x.x",
     "deep-log": "^1.x.x",
-    "deep-package-manager": "^1.x.x",
+    "deep-package-manager": "file:/Users/AlexanderC/Desktop/Projects/deep-package-manager/src",
     "dtrace-provider": "^0.8.x",
     "fs-extra": "^2.1.x",
     "inquirer": "^3.0.x",
@@ -80,7 +81,8 @@
     "tmp": "^0.0.x",
     "twig": "^1.10.x",
     "webpack-merge": "^4.1.x",
-    "pify": "^2.3.x"
+    "pify": "^2.3.x",
+    "pretty-ms": "^2.1.x"
   },
   "devDependencies": {
     "chai": "^3.5.x",
