--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deepify",
-  "version": "2.0.14",
+  "version": "3.0.0",
   "buildDate": "Thu Apr  6 18:07:30 EEST 2017",
   "description": "DEEP Development Tools",
   "keywords": [
@@ -66,7 +66,7 @@
     "deep-db": "^1.x.x",
     "deep-fs": "^1.x.x",
     "deep-log": "^1.x.x",
-    "deep-package-manager": "file:/Users/AlexanderC/Desktop/Projects/deep-package-manager/src",
+    "deep-package-manager": "^2.0.x",
     "dtrace-provider": "^0.8.x",
     "fs-extra": "^2.1.x",
     "inquirer": "^3.0.x",
