--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deepify",
-  "version": "3.0.5",
+  "version": "3.0.8",
   "buildDate": "Thu Apr  6 18:07:30 EEST 2017",
   "description": "DEEP Development Tools",
   "keywords": [
@@ -57,7 +57,8 @@
     "aws-sdk": "^2.39.x",
     "babel-cli": "^6.24.x",
     "babel-preset-node6": "^11.0.x",
-    "babel-preset-modern-browsers": "^9.0.x",
+    "babel-preset-es2015": "^6.24.x",
+    "babel-plugin-transform-es2015-classes": "^6.24.x",
     "babel-plugin-add-module-exports": "^0.2.x",
     "cli-spinner": "^0.2.x",
     "co": "^4.6.x",
