--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deepify",
-  "version": "3.0.8",
+  "version": "3.0.9",
   "buildDate": "Thu Apr  6 18:07:30 EEST 2017",
   "description": "DEEP Development Tools",
   "keywords": [
@@ -60,6 +60,7 @@
     "babel-preset-es2015": "^6.24.x",
     "babel-plugin-transform-es2015-classes": "^6.24.x",
     "babel-plugin-add-module-exports": "^0.2.x",
+    "babel-preset-es2015-node4": "^2.1.x",
     "cli-spinner": "^0.2.x",
     "co": "^4.6.x",
     "es6-promise-pool": "^2.4.x",
