--- a/.jst.yml
+++ b/.jst.yml
@@ -1,28 +1,29 @@
 --- 
 $:
-   preprocess:
-    '$.coverage.compare.storage.options.1.region': 'eval'
-    '$.coverage.compare.storage.options.1.accessKeyId': 'eval'
-    '$.coverage.compare.storage.options.1.secretAccessKey': 'eval'
-    '$.cache.options.1.region': 'eval'
-    '$.cache.options.1.accessKeyId': 'eval'
-    '$.cache.options.1.secretAccessKey': 'eval'
-   cache:
-     driver: 's3'                                                          # Available drivers: void, s3
-     options:
-       - 's3://travis-metadata/cache/sample-repo'                          # S3 cache directory
-       -                                                                   # S3 client options
-         region: 'process.env.JST_AWS_REGION'
-         accessKeyId: 'process.env.JST_AWS_ACCESS_KEY_ID'
-         secretAccessKey: 'process.env.JST_AWS_SECRET_ACCESS_KEY'
+  preprocess:
+   '$.coverage.compare.storage.options.1.region': 'eval'
+   '$.coverage.compare.storage.options.1.accessKeyId': 'eval'
+   '$.coverage.compare.storage.options.1.secretAccessKey': 'eval'
+   '$.cache.options.1.region': 'eval'
+   '$.cache.options.1.accessKeyId': 'eval'
+   '$.cache.options.1.secretAccessKey': 'eval'
+  cache:
+    driver: 's3'                                                          # Available drivers: void, s3
+    options:
+      - 's3://travis-metadata/cache/deepify'                              # S3 cache directory
+      -                                                                   # S3 client options
+        region: 'process.env.JST_AWS_REGION'
+        accessKeyId: 'process.env.JST_AWS_ACCESS_KEY_ID'
+        secretAccessKey: 'process.env.JST_AWS_SECRET_ACCESS_KEY'
   npm:
-    scripts: []                                                             # Scripts to run after installing dependencies
-  #   - 'compile'
+    scripts:                                                              # Scripts to run after installing dependencies
+      - 'compile-travis'
     dependencies:                                                           # Dependencies to add/overwrite
       chai: 'latest'
   emit:
     pattern:                                                                # Files to include
-      - /.+\.js$/i
+      - /^lib.es6\/.+\.js$/i
+      - /^test\/.+\.js$/i
     ignore:                                                                 # Files to exclude
       - /^(.*\/)?node_modules(\/?$)?/i
   test:
@@ -41,18 +42,18 @@ $:
       - /^(.*\/)?node_modules(\/?$)?/i
     reporters:                                                              # Istanbul reporters
       text-summary: ~
-     compare:
-       negative-delta: 3                                                   # Compare coverage info and if negative delta is more than X fail (0.01-100.00)
-       storage:                                              
-         driver: 's3'                                                      # Available drivers: s3, volative
-         options:
-           - 's3://travis-metadata/coverage/sample-repo'                   # S3 storage directory
-           -                                                               # S3 storage options
-             region: 'process.env.JST_AWS_REGION'
-             accessKeyId: 'process.env.JST_AWS_ACCESS_KEY_ID'
-             secretAccessKey: 'process.env.JST_AWS_SECRET_ACCESS_KEY'
-main:                                                                       # Main module definition
-  root: '.'                                                                 # Root package directory (containing package.json and tests)
+    compare:
+      negative-delta: 3                                                   # Compare coverage info and if negative delta is more than X fail (0.01-100.00)
+      storage:                                              
+        driver: 's3'                                                      # Available drivers: s3, volative
+        options:
+          - 's3://travis-metadata/coverage/deepify'                       # S3 storage directory
+          -                                                               # S3 storage options
+            region: 'process.env.JST_AWS_REGION'
+            accessKeyId: 'process.env.JST_AWS_ACCESS_KEY_ID'
+            secretAccessKey: 'process.env.JST_AWS_SECRET_ACCESS_KEY'
+plugin:                                                                       # Main module definition
+  root: 'src/'                                                                 # Root package directory (containing package.json and tests)
   dependencies: ~                                                           # Dependencies to add/overwrite (over $.npm.dependencies config)
 
 ### Add other modules here...
