--- a/src/package.json
+++ b/src/package.json
@@ -48,7 +48,7 @@
     "url": "https://github.com/MitocGroup/deepify.git"
   },
   "scripts": {
-    "compile-travis": "bash ../../bin/compile-lib.sh .",
+    "compile-travis": "bash ../bin/compile-lib.sh .",
     "compile": "bash node-bin/compile.sh",
     "prepublish": "npm run compile"
   },
