--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 git: {depth: 1}
-node_js: [6, 7]
+node_js: [6, 7, 8]
 cache:
   bundler: true
   directories: [node_modules, $(npm root -g), $(npm config get prefix)/bin]
